# src/blueapi/service/main.py
@@ -16,6 +16,7 @@ from super_state_machine.errors import TransitionError
 
 from blueapi.config import ApplicationConfig
 from blueapi.worker import Task, TrackableTask, WorkerState
+from blueapi.worker.event import TaskStatusEnum
 
 from .handler_base import BlueskyHandler
 from .model import (
@@ -26,6 +27,7 @@ from .model import (
     PlanResponse,
     StateChangeRequest,
     TaskResponse,
+    TasksListResponse,
     WorkerTask,
 )
 from .subprocess_handler import SubprocessHandler
@@ -171,6 +173,28 @@ def delete_submitted_task(
     handler: BlueskyHandler = Depends(get_handler),
 ) -> TaskResponse:
     return TaskResponse(task_id=handler.clear_task(task_id))
+
+
+def validate_task_status(v: str) -> TaskStatusEnum:
+    v_upper = v.upper()
+    if v_upper not in TaskStatusEnum.__members__:
+        raise ValueError("Invalid status query parameter")
+    return TaskStatusEnum(v_upper)
+
+
+@app.get("/tasks/", response_model=TasksListResponse, status_code=status.HTTP_200_OK)
+def get_tasks(
+    task_status: str,
+    handler: BlueskyHandler = Depends(get_handler),
+) -> TasksListResponse:
+    """
+    Retrieve tasks based on their status.
+    The status of a newly created task is 'unstarted'.
+    """
+    desired_status = validate_task_status(task_status)
+
+    tasks = handler.get_tasks_by_status(desired_status)
+    return TasksListResponse(tasks=tasks)
 
 
 @app.put(
